# inventree-kicad

./: README.md  pyproject.toml
src/inventree-kicad/: __init__.py
src/inventree_kicad/: KicadPlugin.py
